index.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  font-family: 'Poiret One';
  color: #26A65B;
}

a {
  color: #6C7A89;
  text-decoration: none;
}

#wrapper {
  height: 100%;
  position: relative;
}

#about {
  font-size: 2em;
}

.description {
  display: inline;
  line-height: 1em;
}

/* GENERAL CLASSES */
.align {
  margin: 5%;
  position: absolute;
}

.active {
  background: #26A65B;
}

.inactive {
  background: #ECF0F1;
}

.centre {
  /*transform: translate(-50%, -50%);*/
  left: 3%;
  top: 50%;
  position: absolute;
}

.italic {
  font-style: italic;
  color: #DB1B5A;
}

.superscript {
  vertical-align: super;
  font-size: 0.5em;
}

/* CELLULAR AUTOMATON */
.cell {
  padding: 0.3em;
  margin: 0.1em;
  float: left;
  font-size: 1em;
}

